Refactor: don't use Arrays.asList when possible